--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-1.mdx
@@ -6,31 +6,11 @@ tags:
   - "Core d20 RPG"
   - "Бестиарий"
   - "Роли"
-  - "Скрытень"
-  - "Засадник"
-  - "Артиллерия"
-  - "Снайпер"
   - "Громила"
-  - "Лидер"
-  - "Командир"
-  - "Солдат"
-  - "Контроллер"
-  - "Поддержка"
   - "Налетчик"
 ---
 
 Как уже упоминалось в предыдущих статьях -  стратегия существа определяет его особенности и связана с ролью, выполняемой на поле сражения. Отсюда явным образом следует что роли имеют набор характерных особенностей существа и его способностей и действий, которые наиболее характерны для этой роли.
-
-
-## **Засадник**, он же **скрытень**.
-
-## **Артиллерия**, он же **снайпер**
-
-***Прицеливание.*** Бонусным действием монстр может добавить 1к10 к следующей атаке или броску урона при атаке с дистанции.
-
-***Фокус.*** Бонусным действием монстр может выбрать в качестве цели существо, которое он видит в радиусе 120 футов от себя, и сделать его своим фокусом. Цель остается в фокусе монстра в течение 1 минуты, или пока либо цель, либо монстр не упадут до 0 хитов. Монстр может добавить 1d4 к атаке и броскам урона против цели.
-
-***Уверенный прицел.*** Атаки монстра дальнобойным оружием игнорируют укрытие на половину и на три четверти. Кроме того, атака на дальних дистанциях не накладывает помеху на броски атаки дальнобойным оружием.
 
 ## **Громила**
 
@@ -72,45 +52,7 @@ tags:
 
 ***Боевая магия.*** Когда монстр использует свое действие, чтобы сотворять заклинание, он может совершить одну атаку оружием в качестве бонусного действия.
 
-
-## **Солдат**
-
-## **Контролер**
-
-
-***Аура эрозии разума.*** Любое враждебное существо, которое начинает свой ход в радиусе 30 футов от монстра, должно сделать Спасбросок интеллекта (КС зависит от интеллекта). При неудачном спасброске существо получает помеху при всех спасбросках мудрости и харизмы до начала следующего хода монстра.
-
-***Сломленная воля (действие).*** Монстр выбирает одно существо, с которым он может общаться посредством телепатии. Цель должна сделать спасбросок мудрости (КС зависит от интеллекта). Если спасбросок провален, монстр выбирает движение и действие цели в свой следующий ход. Существо невосприимчиво к этой способности, если оно невосприимчиво к очарованию.
-
-***Захватывающее присутствие.*** Любое существо, которое начинает свой ход в радиусе 30 футов от монстра, должно сделать спасбросок мудрости (КС основан на харизме). Если спасбросок провален, существо становится очарованным монстром на 1 минуту или до тех пор, пока оно не удалится от него на расстояние более 30 футов. При успешном спасброске существо становится невосприимчивым к пленяющему присутствию монстра на 24 часа.
-
-***Ограниченный полет.*** Монстр может использовать бонусное действие, чтобы получить скорость полета, равную его скорости ходьбы, до конца хода.
-
-***Перенаправленная атака.*** Реакцией на атаку существа, которое монстр может видеть, является выбор союзника в радиусе 5 футов от него. Два существа меняются местами, и выбранный союзник становится целью.
-
-***Ошеломляющий взгляд (действие).*** Монстр выбирает одно существо, которое он может видеть в радиусе 30 футов от себя. Цель должна успешно совершить спасбросок Мудрости (КС зависит от Харизмы) или быть ошеломлена до конца своего следующего хода.
-
-
-Контролирующие атаки (особенность). Когда это существо поражает цель атакой, на нее накладывается одно из следующих состояний, в зависимости от концепции существа: ослеплен, зачарован, испуг,  
-Захват, отравление, Распластанность или Обездвиживание. Состояние длится до конца следующего хода цели.  
-
-Контролирующие заклинания (особенность). Выберите до двух из следующих заклинаний: слепота/глухота, повеление, опутывание, смазка, порыв ветра, жуткий смех, удержание человека, левитация, луч ослабления, молчание, внушение или паутина. Это существо может сотворять любое из выбранных заклинаний как действие. Если у этого существа еще нет КС спасброска от заклинаний, то КС спасброска для этих заклинаний равен 10 + 1/2 ПО. Выбранные заклинания не могут быть изменены для этого существа. 
-
-Усовершенствованное контролирующее заклинание (особенность). Выберите одно заклинание из из особенности "Контролирующие заклинания", которое может сотворять это существо. Существо получает одно из следующих преимуществ: 
-- Заклинание можно сотворять как бонусное действие.  
-- Заклинание можно сотворять в качестве реакции на получение урона  
-от врага. 
-- Если заклинание обычно направлено на одно существо, то вместо этого оно может на двух существ в пределах своей обычной зоны действия.  
-
-
-## **Поддержка**
-
 ## **Налетчик**
-
-
-### Скирмишеры
-
-Засада, хитрость, неуловимость, уклонение, полет, невидимость, проворное бегство, тактика стаи, теневая скрытность, скрытая атака, Скрытая атака и увертливость - все эти характеристики (либо характеристики класса Плут, либо общие характеристики монстров) подходят для скирмишеров. Кроме того, для усиления скирмишеров можно использовать следующие характеристики.
 
 ***Ассасин.*** Во время своего первого хода монстр имеет преимущество при бросках атаки против любого существа, которое еще не совершило ход. Любое попадание монстра по застигнутому врасплох существу считается критическим.
 
@@ -122,69 +64,17 @@ tags:
 
 ***Покрытие на себя (действие).*** Монстр магически становится невидимым до начала вашего следующего хода. Невидимость заканчивается, если монстр делает бросок атаки, наносит урон или сотворяет заклинание.
 
-Проворный (черта). Это существо игнорирует труднопроходимую местность. 
+***Проворный (особенность).*** Это существо игнорирует труднопроходимую местность. 
 
-Осторожные шаги (бонусное действие). Движение этого существа не провоцирует атаки по возможности до конца его хода. 
+***Осторожные шаги (бонусное действие).*** Движение этого существа не провоцирует атаки по возможности до конца его хода. 
 
-Нокаут (особенность). Когда это существо поражает цель атакой, оно может выбрать, чтобы оттолкнуть ее на 5 футов от себя. Если это существо имеет ПО 4 или выше, цель также должна  
-преуспеть в спасброске Силы (КС = 10 + 1/2 ПО) или быть сбитой с ног. 
+***Нокаут (особенность).*** Когда это существо поражает цель атакой, оно может выбрать, чтобы оттолкнуть ее на 5 футов от себя. Если это существо имеет ПО 4 или выше, цель также должна преуспеть в спасброске Силы (КС = 10 + 1/2 ПО) или быть сбитой с ног. 
 
-Быстрый шаг (реакция). Когда это существо совершает атаку с дистанции, оно может сначала переместиться на 5 футов, не провоцируя атаки по возможности. 
+***Быстрый шаг (реакция).*** Когда это существо совершает атаку с дистанции, оно может сначала переместиться на 5 футов, не провоцируя атаки по возможности. 
 
 ***Реакцией на промах существа при атаке в ближнем бою против монстра или если враждебное существо заканчивает свой ход в радиусе 5 футов от монстра, монстр может передвигаться на половину своей скорости, не провоцируя атаки по возможности.
 
-## **Лидер**, он же **командир**
 
-### Лидеры
+В следующей статье мы рассмотрим другие роли и характерные для них особенности и действия.
 
-В моем документе [https://www.gmbinder.com/share/-LtrZrYqZl6TBt8gu9lt](Warlord Collection) приведен список возможных характеристик, которыми может быть наделен монстр типа "Лидер", некоторые из них перепечатаны ниже. Хотя все сгенерированные монстры в этом документе обладают легендарными действиями, имейте в виду, что они не являются обязательным условием для всех лидеров.
-
-***Вдохновение на поле боя (действие).*** Монстр выбирает до трех союзников, которых он может видеть в радиусе 30 футов от себя. До конца следующего хода монстра каждая цель может добавить к4 к своим броскам атаки и спасброскам.
-
-***Бульвар (3/день).*** Реакцией является то, что если союзник в радиусе 30 футов от военачальника проваливает спасбросок, союзник может перебросить спасбросок.
-
-***Бонусным действием монстр выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит монстра, он может сделать одну атаку оружием в качестве реакции и получает преимущество при броске атаки.
-
-***Лидерство (действие; перезаряжается после короткого или длинного отдыха).*** В течение 1 минуты монстр может произносить особую команду или предупреждение, когда невраждебное существо, которое он видит в радиусе 30 футов от него, делает бросок атаки или спасбросок. Существо может добавить К4 к своему броску, если оно слышит и понимает монстра. Существо может одновременно использовать только один кубик Лидерства. Эффект заканчивается, если монстр недееспособен.
-
-***Бонусным действием монстр выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит или слышит монстра, он получает временные хиты, равные рейтингу вызова монстра плюс его модификатор харизмы. Если союзник в данный момент очарован или испуган, эти эффекты немедленно прекращаются на него самого.
-
-***Тактический маневр.*** В качестве Бонусного действием монстр выбирает одного монстра, которого он видит в радиусе 60 футов от себя. Если союзник видит и слышит монстра, он может использовать свою реакцию, чтобы переместиться на половину своей скорости, не провоцируя атаки по возможности.
-
-## Создание боя с боссом
-
-В D&D и фантастике в целом концепция эпической схватки с могущественным монстром-боссом универсальна. Прежде чем создавать совершенно новые механики для боссов-монстров, давайте сначала обсудим уже существующие варианты и расширим их по мере необходимости.
-
-### Реакции
-
-Реакции - это базовая возможность действия, доступная всем существам, позволяющая им создавать какой-либо эффект в ответ на определенный триггер. По умолчанию единственной реакцией монстра по желанию является атака по возможности. Однако очень легко взять существующие реакции из официальных монстров (например, Parry) и добавить их в пользовательского монстра.
-
-Рассмотрите возможность использования следующих особенностей для повышения способности монстра к использованию реакций.
-
-***Быстрые рефлексы.*** Когда монстр использует реакцию, он также может перемещаться на половину своей скорости, не провоцируя атаки по возможности.
-
-***Легендарная реакция.*** Монстр может потратить одно легендарное действие на реакцию, даже если он уже использовал свою обычную реакцию.
-
-***Ограниченная реакция.*** Монстр может использовать две реакции за раунд в бою.
-
-***Реакция.*** Монстр может использовать одну реакцию на каждый ход боя.
-
-### Легендарные Устойчивости
-
-Легендарная Устойчивость дается многим легендарным монстрам, чтобы предотвратить их захват способностью "спаси или отсоси", такой как заклинание *держать монстра* или способность монаха "Ошеломляющий удар". С одной стороны, эта механика может предотвратить преждевременное завершение боя с боссом из-за неудачного спасброска против мощного эффекта. С другой стороны, некоторые DM считают эту механику скучной и/или несправедливой по отношению к игрокам. В таком случае рассмотрите следующие альтернативы:
-
-***Вырваться на свободу.*** Если монстр недееспособен в начале своего хода, эффект, вызвавший это состояние, немедленно заканчивается на монстре, и монстр получает урон, равный его рейтингу вызова.
-
-***Свобода действий.*** У монстра есть преимущество при спасбросках против эффектов, которые могли бы его обездвижить или лишить дееспособности.
-
-***Свобода передвижения.*** Монстр игнорирует труднопроходимую местность, а магические эффекты не могут уменьшить его скорость или обездвижить. Он может потратить 5 футов движения, чтобы освободиться от немагических ограничений или быть захваченным.
-
-***Неукротимый (3/день).*** Монстр может повторно выполнить неудачный Спасбросок. Он должен использовать новый бросок.
-
-***Легендарная прочность (1/ход).*** Монстр может выбрать уменьшение вдвое урона, получаемого от эффекта, который он может видеть.
-
-***Легендарная защита.*** Если монстр проваливает Спасбросок, он может потратить одно легендарное действие, чтобы добиться успеха.
-
-***Легендарная Устойчивость (1/раунд).*** Если монстр проваливает Спасбросок, он может выбрать вместо него Успех.
-
-***Непробиваемый (3/день).*** Если монстр недееспособен в начале своего хода, эффект, вызывающий это состояние, немедленно прекращается на монстре.
+Продолжение следует...
