--- a/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-2.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-templates-of-creature-roles-part-2.mdx
@@ -10,149 +10,218 @@ tags:
   - "Засадник"
   - "Артиллерия"
   - "Снайпер"
-  - "Громила"
-  - "Лидер"
-  - "Командир"
-  - "Солдат"
-  - "Контроллер"
-  - "Поддержка"
-  - "Налетчик"
 ---
 
 Как уже упоминалось в предыдущих статьях -  стратегия существа определяет его особенности и связана с ролью, выполняемой на поле сражения. Отсюда явным образом следует что роли имеют набор характерных особенностей существа и его способностей и действий, которые наиболее характерны для этой роли.
 
+При определении показателя опасности существа мы вычисляем два промежуточных значения, которые потом усредняются. Это:
+- Атакующий Показатель Опасности (АПО), который де факто определяется средним уроном, которое существо наносит в течении 3х раундов сражения.
+- Защитный Показатель Опасности (ЗПО), который де факто характеризует эффективные хиты существа.
+
+## АПО и ЗПО по ролям монстров
+
+Большинство  существ имеют по крайней мере немного больше атакующей силы, чем защитной. В этом есть смысл: слишком большая защита делает бой слишком вялым и скучным, а слишком малое нападение заставляет существа не чувствовать угрозы для партии.
+
+В частности, у многих существ АПО на 6 больше, чем ЗПО (до того, как в игру вступают особенности). 
+
+Учитывая это, ниже приведена таблица с рекомендуемым диапазоном числовых различий между АПО и ЗПО существа в зависимости от его роли.
+
+| Роль | АПО - ЗПО |
+|------------|-----------|
+| Громила | от 2 до 4 |
+| Контролер | от 4 до 8 |
+| Налетчик | от 6 до 8 |
+| Артиллерия | от 6 до 8 |
+| Солдат | от 4 до 6 |
+| Атакующий | от 8 до 10 |
+
+Представим быстрые статистики монстров в DMG в виде набора математических формул. Обратите внимание, что эти формулы имеют некоторую свободу действий и немного менее точны, чем правила DMG.
+
+Для целей этих формул рассматривайте дробные ПО как отрицательные целые числа: 1/2 равно 0, 1/4 равно -1, 1/8 равно -2, а 0 равно -3.
+
+##### Статистика атаки
+| АПО | Урон за раунд | Модификатор атаки | КС спасения |
+|----------|------------------|--------------|--------------|
+| От 0 до 1/2 | 2(АПО) + 7 | 3 | 13 |
+| От 1 до 19 | 6(АПО) + 5 | .4(АПО) + 3 | .4(АПО) + 12 |
+| От 20 до 30 | 18(АПО - 13) + 5 | (АПО)/3 + 3 | (АПО)/3 + 12 |
+
+##### Статистика защиты
+| ЗПО | Хиты | Класс Защиты |
+|----------|-------------------|--------------|
+| От 0 до 1/2 | 19(ЗПО + 3) + 3 | 13 |
+| От 1 до 19 | 15(ЗПО + 4) + 3 | (ЗПО)/3 + 13 |
+| От 20 до 30 | 45(ЗПО - 12) - 12 | 19 |
+
+### Существенная информация
+
+Чтобы сделать этот перевод, мы можем понять, что большинство особенностей либо увеличивают эффективный бонус атаки монстра, либо его эффективный класс доспехов. В свою очередь, в DMG говорится, что если эффективный КЗ или бонус атаки существа на 2 пункта выше (или ниже), то его ЗПО или АПО (соответственно) становится на 1 пункт выше (или ниже). Другими словами, особенности вроде Устойчивости к магии, добавляющие +2 к эффективному КЗ монстра, напрямую увеличивают его ЗПО на 1. Мы можем обобщить эту важную статистику следующим образом:
+
+##### Основные статистические данные
+| Название | Влияние на рейтинг вызовов |
+|-----------------------------------|-------------------------------------|
+| Эффективный КЗ +2 | ЗПО +1 |
+| Эффективный Модификатор атаки/Спасение КС +2 | АПО +1 |
+| Владение спасением | ЗПО +1/2 за каждое спасение выше 2 |
+| Постоянное преимущество при спасении | Считается как дополнительное владение спасением |
+
+### Состояние
+
+Как уже говорилось ранее, WotC часто рассматривает состояния как нанесение "виртуального урона" монстру. Поскольку урон линейно зависит от ПО, а состояния одинаково актуальны на всех уровнях, мы можем сделать еще один шаг вперед, переведя этот "виртуальный урон" в приращения ПО существа.
+
+Состояния, облегчающие атаку существа (например, ошеломлен), увеличивают АПО существа. Состояния, которые только затрудняют атаку существа (например, отравление), увеличивают ЗПО существа. Оба эффекта получаются путем сравнения заклинаний, которые их накладывают (например, испуг или паралич), с эквивалентными заклинаниями того же уровня (например, *щит веры* или *опаляющий луч*) или с эквивалентными эффектами на одном монстре, который может накладывать такие состояния (например, лучи глаз смотрящего).
+
+Предположим, что каждое из приведенных ниже состояний направлено только на одно существо и может быть наложено один раз в раунд. Если состояние накладывается в области действия, можно предположить, что оно будет действовать на двух существ, что позволит вам удвоить эффект на ПО, указанный ниже. Если состояние не указано, значит, его влияние на ПО пренебрежимо мало или не стоит определять его количественно.
+
+##### Состояния
+| Название | Длительность | Влияние на рейтинг |
+|---------------|-----------------------|----------------------------|
+| Ослеплен | 1 минута, спасение заканчивается | АПО +1 |
+| Очарован | 1 минута, спасение заканчивается | ЗПО +1 |
+| Истощение | Мгновенно | ПО +1 |
+| Испуг | 1 минута, спасение заканчивается | ЗПО +1 |
+| Недееспособный | 1 минута, спасение заканчивается | АПО +1 |
+| Парализованный | 1 минута, спасение заканчивается | АПО +2 |
+| Окаменение | Пока не рассеется | АПО +3 |
+| Яд | 1 минута, спасение заканчивается | АПО +1/2 |
+| Обездвиживание | до побега | АПО +1/2 |
+| Ошеломлен | 1 минута, спасение заканчивается | АПО +3/2 |
+| Без сознания | 1 минута, урон заканчивается | АПО +2 |
+
+### Характеристики  существа
+
+| Название | Пример существа | Влияние на ПО |
+|-----------------------|--------------------------|--------------------------------------------------------|
+| Агрессивный | **Орк** | Округляет общий АПО в большую сторону, а не в меньшую (если это уместно). |
+| Засада | **Доппльгангер** | АПО +1/2 |
+| Избегание | **Демилич** | ЗПО +1 |
+| Ярость крови | **Сахуагин** | АПО +2 |
+| Сужение | **Удав** | ЗПО +1/2 |
+| Неуловимый | **Лазав** | ЗПО +1/2 |
+| Устрашающее присутствие | **Древний черный дракон** | ЗПО +2 |
+| Улучшенный критический | - | Округляем общий АПО в большую, а не в меньшую сторону (если это необходимо). |
+| Неукротимый | **Чемпион** | ЗПО +1/2 за каждое доступное использование |
+| | Невидимость | **Имп** | ЗПО +1/2 |
+| Лидерство | **Капитан хобгоблинов** | ПО +1/2 |
+| Устойчивость к легендарному воздействию | **Древний черный дракон** | ЗПО +1 за использование |
+| Устойчивость к магии | **Балор** | ЗПО +1 |
+| Проворный побег | **Гоблин** | ПО +2 (при условии, что существо скрывается каждый раунд)|
+| Тактика стаи | **Кобольд** | АПО +1/2 |
+| Парирование | **Хобгоблин-генерал** | ЗПО +1/2 |
+| Rampage | **Гнолл** | Округлите общее АПО в большую, а не в меньшую сторону (если это имеет значение). |
+| Реакция | **Марилит** | ПО +1/2 |
+| Перенаправленная атака | **Гоблин-босс** | ЗПО +1/2 |
+| Relentless | **Вермедведь** | ЗПО +1 |
+| Теневая невидимость | **Теневой демон** | ЗПО +2 (при условии, что существо скрывается каждый раунд)|
+| Медленный | **Каменный голем** | ЗПО +1 |
+| Зловоние | **Троглодит** | ЗПО +1/2 |
+| Высшая невидимость | **Фэйри дракон** | ЗПО +1 |
+| Непостижимое уклонение | **Мастер вор** | ЗПО +1/2 |
+| Стойкость Нежити | **Зомби** | ЗПО +1 |
+| Паутина | **Гигантский паук** | ЗПО +1/2 |
+
+Мы также можем применить это к разным эффектам, которые не определяются ни одной особенностью, например, наложить помеху на спасброски или автоматически снизить количество HP существа до 0, если оно провалило один спасбросок.
+
+### Другие особенности
+| Характеристика | Длительность | Влияние на рейтинг |
+|-------------------------------|---------------|------------------------------------------------------------------------|
+| Не поддается ментальному воздействию | - | ЗПО +1/2 |
+| Накладывает -1d4 на спасброски | 1 раунд | АПО +1/2 |
+| Накладывает помеху на спасброски | 1 раунд | АПО +1 |
+| Мгновенное снижение до 0 хитов | Мгновенно | Эквивалентно трехкратному урону самой сильной атаки существа |
+| Позволяет союзнику совершить атаку | Мгновенно | Эквивалентно урону самой слабой атаки существа |
 
 ## **Засадник**, он же **скрытень**.
 
+**Хиты:** уменьшить на 20% 
+
+или 
+
+**КЗ:** уменьшить на 2
+
+**Навыки:** Скрытность (экспертиза)
+
+**Отвлекающая атака (особенность).** Когда это существо попадает  
+атакой, оно может стать невидимым до начала своего  
+следующего хода. 
+
+**Теневое передвижение (Особенность).** Это существо может попытаться скрыться в тусклом свете или на местности со слабо ограниченным зрением. Когда это существо движется, оно может сделать проверку ловкости (скрытность), чтобы скрыться во времени этого движения.
+
+**Пригнуться и укрыться (особенность).** Когда это существо поражает цель атакой и имеет преимущество в броске атаки, оно наносит ПО + 2 дополнительных урона. 
+
+Nimble Reaction 
+
+**Удар в спину.** Если у вас есть преимущество при атаке, вы наносите дополнительный урон, равный вашему уровню.
+
+**Пролитая выносливость.**	Когда вы поражаете существо атакой, оно должно совершить спасбросок Телосложения или получить один уровень истощения. Это истощение проходит естественным образом через 1 минуту спокойного отдыха.
+
+**Камуфляж.** Когда вы скрылись, существа не могут обнаружить вас с помощью пассивного восприятия, и у них есть помеха при выполнении активных проверок, чтобы найти вас.
+
+**Хитрое действие.**	Бонусным действием вы можете совершить Рывок, Отход или Скрыться.
+
+**Ярость смерти.**	Когда ваше количество хитов уменьшается до 0, вы можете потратить свою реакцию, чтобы совершить одну атаку против существа, которое вы видите.
+
+**Партизан.**	Когда вы совершаете атаку, находясь в скрытом состоянии, вы не раскрываете себя и можете оставаться в скрытом состоянии.
+
+**Скрыться на виду.**	Вы можете попытаться скрыться за любым видом укрытия - наполовину, на три четверти или полностью. Вы должны находиться вне прямой видимости.
+
+**Исчезнуть.**	Вы можете потратить действие, чтобы стать невидимым до конца вашего следующего хода. Вы должны дождаться окончания действия этого эффекта, прежде чем сможете использовать его снова.
+
+**Скрытая атака (1/ход).** Существо наносит дополнительные 14 (4к6) урона, когда поражает цель атакой оружием и имеет преимущество при броске атаки, или когда цель находится в пределах 5 футов от союзника существа, который не дееспособен, и у существа нет помехи при броске атаки.		
+
+## Артиллерия, он же снайпер
+
+**Бонус атаки:** +2 
+
+или 
+
+**Бонус атаки:** +1
+
+**Урон:** +1 за каждую кость урона
+
+**Хиты:** уменьшить на 20% 
+
+или 
+
+**КЗ:** уменьшить на 2
+
+
+**Ближний бой.**	Вы не получаете помех при атаках в радиусе 5 футов от враждебного существа.
+
+**Бей неподвижных.**	У вас есть преимущество при бросках атаки против любого существа, которое за последний ход передвинулось менее чем на 10 футов.
+
+**Я тебя вижу.**	Ваши дальние атаки игнорируют укрытия на половину и три четверти.
+
+**Следующий раз.**	Если вы пропустите атаку против существа, у вас будет преимущество при следующей атаке против этого же существа до конца вашего следующего хода.
+
+**Прикалывающий выстрел.**	Один раз за ход, попав атакой по существу, вы можете снизить скорость этого существа до 0 до начала вашего следующего хода.
+
+**Добыча.**	Вы можете потратить свое бонусное действие, чтобы назначить существо своей добычей. Когда вы атакуете свою добычу, вы наносите дополнительный урон, равный вашему уровню.
+
+**Рикошет.**	Если вы пропустили атаку против существа, вы можете потратить свою реакцию, чтобы совершить еще одну атаку против другого существа по вашему выбору в радиусе 15 футов от первоначальной цели.
+
+**Рассеянный огонь.**	Один раз за ход, когда вы поражаете существо атакой, вы можете нанести урон, равный вашему уровню, каждому другому существу в радиусе 5 футов от цели.
+
+**Уверенный выстрел (реакция).** Когда это существо промахивается при атаке с дистанции, оно может перебросить эту атаку. 
+
+**Быстрый шаг (реакция).** Когда это существо совершает атаку с дистанции, оно может сначала переместиться на 5 футов, не провоцируя атаки по возможности. 
+
+***Прицеливание.*** Бонусным действием существо может добавить 1d10 к своей следующей атаке или броску урона при атаке с дистанции.
+
+***Фокус.*** В качестве бонусного действия существо может выбрать цель, которую он видит в радиусе 120 футов от себя, и сделать ее своим фокусом. Цель остается в фокусе существа в течение 1 минуты, или пока хиты либо цели, либо существа не упадут до 0. Существо может добавить 1к4 к атаке и броскам урона против цели.
+
+***Уверенный прицел.*** Атаки существа с помощью оружия дальнего боя игнорируют полуприкрытие и укрытие в три четверти. Кроме того, атака на дальних дистанциях не накладывает помеху на броски атаки дальнобойным оружием.
+
 ## Атакующий
 
-Агрессивный, Кровавое бешенство, Боевое преимущество и Безрассудство - все эти характеристики подходят для нападающих. Кроме того, для усиления нападающих рассмотрите любую из следующих характеристик.
+***Всплеск действий (перезаряжается после короткого или длинного отдыха).*** существо может совершить дополнительное действие в свой ход.
 
-***Action Surge (перезаряжается после короткого или длинного отдыха).*** Монстр может совершить дополнительное действие в свой ход.
+***Арканичесое заклинание (1/ход).*** существо может нанести дополнительные 7 (2к6) урона существу, по которому он попадает повреждающей атакой заклинанием, если цель находится в пределах 5 футов от союзника существа и этот союзник не дееспособен.
 
-***Арканичесое заклинание (1/ход).*** Монстр может нанести дополнительные 7 (2d6) урона существу, по которому он попадает повреждающей атакой заклинанием, если цель находится в пределах 5 футов от союзника монстра и этот союзник не дееспособен.
+***Направленный удар (перезаряжается после короткого или длинного отдыха).*** Когда существо делает бросок атаки, он может воспользоваться своей реакцией, чтобы добавить бонус +10 к этому броску.
 
-***Направленный удар (перезаряжается после короткого или длинного отдыха).*** Когда монстр делает бросок атаки, он может воспользоваться своей реакцией, чтобы добавить бонус +10 к этому броску.
+***Улучшенный критический удар.*** Атаки оружием существа наносят критический удар при выпадении 19 или 20 на к20.
 
-***Улучшенный критический удар.*** Атаки оружием монстра наносят критический удар при выпадении 19 или 20 очков на d20.
+***Сотворение заклинаний.*** существо может добавить модификатор своей Заклинательной характеристики к урону, наносимому любым заклинанием.
 
-***Сотворение заклинаний.***Монстр может добавить модификатор своей Заклинательной характеристики к урону, наносимому любым заклинанием.
-
-***Боевая магия.*** Когда монстр использует свое действие, чтобы сотворять заклинание, он может совершить одну атаку оружием в качестве бонусного действия.
-
-
-## **Солдат**
-
-## **Контролер**
-
-
-***Аура эрозии разума.*** Любое враждебное существо, которое начинает свой ход в радиусе 30 футов от монстра, должно сделать Спасбросок интеллекта (КС зависит от интеллекта). При неудачном спасброске существо получает помеху при всех спасбросках мудрости и харизмы до начала следующего хода монстра.
-
-***Сломленная воля (действие).*** Монстр выбирает одно существо, с которым он может общаться посредством телепатии. Цель должна сделать спасбросок мудрости (КС зависит от интеллекта). Если спасбросок провален, монстр выбирает движение и действие цели в свой следующий ход. Существо невосприимчиво к этой способности, если оно невосприимчиво к очарованию.
-
-***Захватывающее присутствие.*** Любое существо, которое начинает свой ход в радиусе 30 футов от монстра, должно сделать спасбросок мудрости (КС основан на харизме). Если спасбросок провален, существо становится очарованным монстром на 1 минуту или до тех пор, пока оно не удалится от него на расстояние более 30 футов. При успешном спасброске существо становится невосприимчивым к пленяющему присутствию монстра на 24 часа.
-
-***Ограниченный полет.*** Монстр может использовать бонусное действие, чтобы получить скорость полета, равную его скорости ходьбы, до конца хода.
-
-***Перенаправленная атака.*** Реакцией на атаку существа, которое монстр может видеть, является выбор союзника в радиусе 5 футов от него. Два существа меняются местами, и выбранный союзник становится целью.
-
-***Ошеломляющий взгляд (действие).*** Монстр выбирает одно существо, которое он может видеть в радиусе 30 футов от себя. Цель должна успешно совершить спасбросок Мудрости (КС зависит от Харизмы) или быть ошеломлена до конца своего следующего хода.
-
-
-Контролирующие атаки (особенность). Когда это существо поражает цель атакой, на нее накладывается одно из следующих состояний, в зависимости от концепции существа: ослеплен, зачарован, испуг,  
-Захват, отравление, Распластанность или Обездвиживание. Состояние длится до конца следующего хода цели.  
-
-Контролирующие заклинания (особенность). Выберите до двух из следующих заклинаний: слепота/глухота, повеление, опутывание, смазка, порыв ветра, жуткий смех, удержание человека, левитация, луч ослабления, молчание, внушение или паутина. Это существо может сотворять любое из выбранных заклинаний как действие. Если у этого существа еще нет КС спасброска от заклинаний, то КС спасброска для этих заклинаний равен 10 + 1/2 ПО. Выбранные заклинания не могут быть изменены для этого существа. 
-
-Усовершенствованное контролирующее заклинание (особенность). Выберите одно заклинание из из особенности "Контролирующие заклинания", которое может сотворять это существо. Существо получает одно из следующих преимуществ: 
-- Заклинание можно сотворять как бонусное действие.  
-- Заклинание можно сотворять в качестве реакции на получение урона  
-от врага. 
-- Если заклинание обычно направлено на одно существо, то вместо этого оно может на двух существ в пределах своей обычной зоны действия.  
-
-
-## **Поддержка**
-
-## **Налетчик**
-
-
-### Скирмишеры
-
-Засада, хитрость, неуловимость, уклонение, полет, невидимость, проворное бегство, тактика стаи, теневая скрытность, скрытая атака, Скрытая атака и увертливость - все эти характеристики (либо характеристики класса Плут, либо общие характеристики монстров) подходят для скирмишеров. Кроме того, для усиления скирмишеров можно использовать следующие характеристики.
-
-***Ассасин.*** Во время своего первого хода монстр имеет преимущество при бросках атаки против любого существа, которое еще не совершило ход. Любое попадание монстра по застигнутому врасплох существу считается критическим.
-
-***Lightfooted.*** Монстр может совершить действие Dash или Отход в качестве бонусного действия в каждый из своих ходов.
-
-***Затаившийся в тени.*** Находясь в темноте, монстр невидим для любого существа, которое может увидеть его в этой темноте с помощью темного зрения.
-
-***Мобильный.*** Когда монстр совершает атаку в ближнем бою против существа, он не провоцирует атаки по возможности от этого существа до конца хода, независимо от того, попадает он или нет.
-
-***Покрытие на себя (действие).*** Монстр магически становится невидимым до начала вашего следующего хода. Невидимость заканчивается, если монстр делает бросок атаки, наносит урон или сотворяет заклинание.
-
-Проворный (черта). Это существо игнорирует труднопроходимую местность. 
-
-Осторожные шаги (бонусное действие). Движение этого существа не провоцирует атаки по возможности до конца его хода. 
-
-Нокаут (особенность). Когда это существо поражает цель атакой, оно может выбрать, чтобы оттолкнуть ее на 5 футов от себя. Если это существо имеет ПО 4 или выше, цель также должна  
-преуспеть в спасброске Силы (КС = 10 + 1/2 ПО) или быть сбитой с ног. 
-
-Быстрый шаг (реакция). Когда это существо совершает атаку с дистанции, оно может сначала переместиться на 5 футов, не провоцируя атаки по возможности. 
-
-***Реакцией на промах существа при атаке в ближнем бою против монстра или если враждебное существо заканчивает свой ход в радиусе 5 футов от монстра, монстр может передвигаться на половину своей скорости, не провоцируя атаки по возможности.
-
-## **Лидер**, он же **командир**
-
-### Лидеры
-
-В моем документе [https://www.gmbinder.com/share/-LtrZrYqZl6TBt8gu9lt](Warlord Collection) приведен список возможных характеристик, которыми может быть наделен монстр типа "Лидер", некоторые из них перепечатаны ниже. Хотя все сгенерированные монстры в этом документе обладают легендарными действиями, имейте в виду, что они не являются обязательным условием для всех лидеров.
-
-***Вдохновение на поле боя (действие).*** Монстр выбирает до трех союзников, которых он может видеть в радиусе 30 футов от себя. До конца следующего хода монстра каждая цель может добавить к4 к своим броскам атаки и спасброскам.
-
-***Бульвар (3/день).*** Реакцией является то, что если союзник в радиусе 30 футов от военачальника проваливает спасбросок, союзник может перебросить спасбросок.
-
-***Бонусным действием монстр выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит и слышит монстра, он может сделать одну атаку оружием в качестве реакции и получает преимущество при броске атаки.
-
-***Лидерство (действие; перезаряжается после короткого или длинного отдыха).*** В течение 1 минуты монстр может произносить особую команду или предупреждение, когда невраждебное существо, которое он видит в радиусе 30 футов от него, делает бросок атаки или спасбросок. Существо может добавить К4 к своему броску, если оно слышит и понимает монстра. Существо может одновременно использовать только один кубик Лидерства. Эффект заканчивается, если монстр недееспособен.
-
-***Бонусным действием монстр выбирает одного союзника, которого он видит в радиусе 30 футов от себя. Если союзник видит или слышит монстра, он получает временные хиты, равные рейтингу вызова монстра плюс его модификатор харизмы. Если союзник в данный момент очарован или испуган, эти эффекты немедленно прекращаются на него самого.
-
-***Тактический маневр.*** В качестве Бонусного действием монстр выбирает одного монстра, которого он видит в радиусе 60 футов от себя. Если союзник видит и слышит монстра, он может использовать свою реакцию, чтобы переместиться на половину своей скорости, не провоцируя атаки по возможности.
-
-## Создание боя с боссом
-
-В D&D и фантастике в целом концепция эпической схватки с могущественным монстром-боссом универсальна. Прежде чем создавать совершенно новые механики для боссов-монстров, давайте сначала обсудим уже существующие варианты и расширим их по мере необходимости.
-
-### Реакции
-
-Реакции - это базовая возможность действия, доступная всем существам, позволяющая им создавать какой-либо эффект в ответ на определенный триггер. По умолчанию единственной реакцией монстра по желанию является атака по возможности. Однако очень легко взять существующие реакции из официальных монстров (например, Parry) и добавить их в пользовательского монстра.
-
-Рассмотрите возможность использования следующих особенностей для повышения способности монстра к использованию реакций.
-
-***Быстрые рефлексы.*** Когда монстр использует реакцию, он также может перемещаться на половину своей скорости, не провоцируя атаки по возможности.
-
-***Легендарная реакция.*** Монстр может потратить одно легендарное действие на реакцию, даже если он уже использовал свою обычную реакцию.
-
-***Ограниченная реакция.*** Монстр может использовать две реакции за раунд в бою.
-
-***Реакция.*** Монстр может использовать одну реакцию на каждый ход боя.
-
-### Легендарные Устойчивости
-
-Легендарная Устойчивость дается многим легендарным монстрам, чтобы предотвратить их захват способностью "спаси или отсоси", такой как заклинание *держать монстра* или способность монаха "Ошеломляющий удар". С одной стороны, эта механика может предотвратить преждевременное завершение боя с боссом из-за неудачного спасброска против мощного эффекта. С другой стороны, некоторые DM считают эту механику скучной и/или несправедливой по отношению к игрокам. В таком случае рассмотрите следующие альтернативы:
-
-***Вырваться на свободу.*** Если монстр недееспособен в начале своего хода, эффект, вызвавший это состояние, немедленно заканчивается на монстре, и монстр получает урон, равный его рейтингу вызова.
-
-***Свобода действий.*** У монстра есть преимущество при спасбросках против эффектов, которые могли бы его обездвижить или лишить дееспособности.
-
-***Свобода передвижения.*** Монстр игнорирует труднопроходимую местность, а магические эффекты не могут уменьшить его скорость или обездвижить. Он может потратить 5 футов движения, чтобы освободиться от немагических ограничений или быть захваченным.
-
-***Неукротимый (3/день).*** Монстр может повторно выполнить неудачный Спасбросок. Он должен использовать новый бросок.
-
-***Легендарная прочность (1/ход).*** Монстр может выбрать уменьшение вдвое урона, получаемого от эффекта, который он может видеть.
-
-***Легендарная защита.*** Если монстр проваливает Спасбросок, он может потратить одно легендарное действие, чтобы добиться успеха.
-
-***Легендарная Устойчивость (1/раунд).*** Если монстр проваливает Спасбросок, он может выбрать вместо него Успех.
-
-***Непробиваемый (3/день).*** Если монстр недееспособен в начале своего хода, эффект, вызывающий это состояние, немедленно прекращается на монстре.
+***Боевая магия.*** Когда существо использует свое действие, чтобы сотворять заклинание, он может совершить одну атаку оружием в качестве бонусного действия.
